[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Logo/logo_name.png" type="Texture" id=1]
[ext_resource path="res://interface/MenuConfirm/MenuConfirm.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/TextButton/TextButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/MenuMain/MenuMain.gd" type="Script" id=4]
[ext_resource path="res://interface/fonts/GravityBold8.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Logo/logo_number.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 5 )

[node name="MenuMain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 90.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 160.0 ]
}
starting_level = "res://levels/Levels/Level01.tscn"

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="TextureRect" parent="."]
margin_left = 15.0
margin_top = -80.0
margin_right = 271.0
margin_bottom = 176.0
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number2" type="TextureRect" parent="."]
margin_left = 305.0
margin_top = -81.0
margin_right = 561.0
margin_bottom = 175.0
rect_scale = Vector2( -1, 1 )
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 0.420441
margin_top = -160.0
margin_right = 0.420441
margin_bottom = 96.0
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -74.0
margin_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
custom_constants/separation = -1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" parent="Buttons" instance=ExtResource( 3 )]
margin_right = 320.0
margin_bottom = 14.0
focus_neighbour_top = NodePath("../ButtonQuit")
focus_neighbour_bottom = NodePath("../ButtonHelp")
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "START"

[node name="ButtonQuit" parent="Buttons" instance=ExtResource( 3 )]
margin_top = 13.0
margin_right = 320.0
margin_bottom = 27.0
rect_clip_content = true
focus_neighbour_top = NodePath("../ButtonCredits")
focus_neighbour_bottom = NodePath("../ButtonStart")
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "QUIT"

[node name="MenuConfirm" parent="." instance=ExtResource( 2 )]
visible = false
is_active = false
